# agent-openai-python-prompty-langchain-pinecone

./: .gitattributes  README.md  azure.yaml  validate_deployment.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: azure-dev-validation.yaml
deployment/: langchain-deployment.yaml
docs/: README.md
infra/: abbreviations.json  main.bicep  main.bicepparam
infra/core/ai/: hub-dependencies.bicep  hub.bicep
infra/core/host/: ai-environment.bicep  ml-online-endpoint.bicep
infra/hooks/: postprovision.ps1  postprovision.sh
src/prompty-langchain-agent/: pyproject.toml
test-app/: .env.example  README.md  pyproject.toml  startup.sh
test-app/app/: server.py
